--- a/css/style1.css
+++ b/css/style1.css
@@ -271,4 +271,8 @@ scrollbar-width: none;  /* Firefox */
     .condate{
         font-size: 22px;
     }
+
+    .addresstext{
+        font-size: 16px;
+    }
 }
