--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ footer {
     Intro section              
 -----------------------------------------*/
 #intro {
-    background: url('../images/new_library_SHADe.jpg') 50% 0 repeat fixed;
+    background: url('../images/org.jpg') 50% 0 repeat fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
