--- a/css/style1.css
+++ b/css/style1.css
@@ -114,6 +114,10 @@ scrollbar-width: none;  /* Firefox */
     font-weight: 500;
 }
 
+.co-text h3{
+    margin-bottom: 0px;
+}
+
 
 /* Create three equal columns that floats next to each other */
 .column1 {
