--- a/css/style1.css
+++ b/css/style1.css
@@ -206,6 +206,9 @@ scrollbar-width: none;  /* Firefox */
     font-size: 18px;
 }
 
+.logo{
+    padding-left: 30px;
+}
 
 
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
