--- a/css/style1.css
+++ b/css/style1.css
@@ -300,4 +300,8 @@ scrollbar-width: none;  /* Firefox */
     .addresstext{
         font-size: 16px;
     }
+
+    .logo{
+        padding-left: 5px;
+    }
 }
